NTI-7938 - fix up-next title overflow for narrow screens

--- a/src/content/viewer/parts/UpNext.css
+++ b/src/content/viewer/parts/UpNext.css
@@ -44,6 +44,7 @@
 
 .next-lesson .title {
 	align-items: baseline;
+	max-width: 640px;
 }
 
 .next-lesson .sub-title {
@@ -71,7 +72,7 @@
 .next-lesson .title span {
 	flex: 0 0 auto;
 	display: inline-block;
-	max-width: 640px;
+	max-width: 100%;
 	margin-right: 0.5rem;
 	color: var(--primary-grey);
 	font: normal 300 1.5rem/1.3 var(--body-font-family);
